Add report bibtex references

--- a/report/report.tex
+++ b/report/report.tex
@@ -90,7 +90,7 @@ likely a future addition to the project.
 \subsubsection{Tactile Graphics}
 Historically, the most popular form of conveying diagrams to the vision
 impaired including maps was by means of a tactile graphic, utilising ``swell paper'' and ``thirmoform diagrams''
-\cite{Roswell2003}. Roads, buildings and other points of interest are
+\cite{mccallum2003}. Roads, buildings and other points of interest are
 displayed tactically with supporting Braille labels in some cases so that
 readers can identify what each raised point or line represents.
 
@@ -407,5 +407,6 @@ Remove all pathways from the map.
 \section{Results and Evaluation}
 
 \section{Conclusion}
-
+\bibliographystyle{IEEEtran}
+\bibliography{IEEEabrv}
 \end{document}
